apps/base/weave-gitops/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: weave-gitops
  labels:
    app: weave-gitops
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
