apps/base/weave-gitops/ingressroute.yaml
---
# Weave GitOps IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weave-gitops
  namespace: flux-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`weave.local`)
      kind: Rule
      services:
        - name: weave-gitops
          port: 9001
